# Interior_decorator-OpenGL_Project

./: README.md  TODO.txt
Grafika-OpenGL/: CMakeLists.txt
Grafika-OpenGL/Interior_decorator/: Display.cpp  Display.h  FragmentShader.frag  FragmentShader_tower_house.frag  FragmentShader_tower_house2.frag  House1.txt  Interior_decorator.cpp  Raw_Obj_Data.cpp  Raw_Obj_Data.h  VertexShader.vert  VertexShader_tower_house2.vert  file_loader.cpp  file_loader.h  file_loader_example.txt  one_model_testing.txt  test.txt  tower_house.txt  tower_house_opt.txt
Grafika-OpenGL/Interior_decorator/Models/Futuristic_apartment/Futuristic_apartment_BI/: Futuristic Apartment.mtl
Grafika-OpenGL/Interior_decorator/Models/KaraArmchair/: fade01.mtl
Grafika-OpenGL/Interior_decorator/Models/KaraArmchair/textures/: Thumbs.db
Grafika-OpenGL/Interior_decorator/Models/RaceCar/: Map__10_Falloff.tga  Map__28_Reflect_Refract.tga  Race_Car1.mtl
Grafika-OpenGL/Interior_decorator/Models/RaceCar_opt/: Map__25_Reflect_Refract.tga  Race_Car.mtl
Grafika-OpenGL/Interior_decorator/Models/bed/: .~lock.bed.mtl#  bed.mtl
Grafika-OpenGL/Interior_decorator/Models/bed_opt/: FragmentShader_tower_house.frag  VertexShader_tower_house.vert  bed.mtl
Grafika-OpenGL/Interior_decorator/Models/hangar/: Hangar.blend1  Hangar.mtl
Grafika-OpenGL/Interior_decorator/Models/lawka_opt/: bank.mtl
Grafika-OpenGL/Interior_decorator/Models/my_box/: Box.blend  Box.mtl
Grafika-OpenGL/Interior_decorator/Models/my_container_opt/: box.mtl
Grafika-OpenGL/Interior_decorator/Models/tower_house/: Tower-House+Design.mtl
Grafika-OpenGL/Interior_decorator/Models/tower_house_opt/: Tower_House.mtl
Grafika-OpenGL/Interior_decorator/Models/wooden_table/: Wooden_Table_noground.mtl
Grafika-OpenGL/Interior_decorator/skybox/: skyboxV.vert.txt
Grafika-OpenGL/common/: controls.cpp  objloader.cpp
Grafika-OpenGL/utilities/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  assimp_Loader.cpp  assimp_Loader.h  control_camera.cpp  control_camera.h  control_objects.cpp  control_objects.h  controls.cpp  controls.h  img_load.cpp  img_load.h  shader_loader.cpp  shader_loader.h  time.cpp  time.h
